--- a/ecmc-ui/.env
+++ b/ecmc-ui/.env
@@ -2,7 +2,7 @@
 VITE_PORT = 3100
 
 # spa-title
-VITE_GLOB_APP_TITLE = EVE军团管理系统
+VITE_GLOB_APP_TITLE = 华夏帝国军团系统
 
 # spa shortname
 VITE_GLOB_APP_SHORT_NAME = cacx
