--- a/ecmc-ui/.env.production
+++ b/ecmc-ui/.env.production
@@ -16,10 +16,10 @@ VITE_BUILD_COMPRESS = 'none'
 VITE_BUILD_COMPRESS_DELETE_ORIGIN_FILE = false
 
 # 基础接口地址
-VITE_GLOB_API_URL=https://api.new.hd-eve.com
+VITE_GLOB_API_URL=https://api.qiyueeve.cn
 
 # 文件上传接口地址
-VITE_GLOB_UPLOAD_URL=https://api.new.hd-eve.com/attach/upload
+VITE_GLOB_UPLOAD_URL=https://api.qiyueeve.cn/attach/upload
 
 # 接口前缀
 VITE_GLOB_API_URL_PREFIX=
